<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/addRound_setting"
        android:orderInCategory="100"
        android:icon="@drawable/ic_add_round"
        android:title="@string/main_bt_newPart"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/play_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settingPlay"
        app:showAsAction="never"/>
    <item
        android:id="@+id/addPlayer_settings"
        android:orderInCategory="100"
        android:title="@string/menu_addPlayers"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/clear_settings"
        android:orderInCategory="100"
        android:title="@string/menu_clearScore"
        app:showAsAction="never"/>
    <item
        android:id="@+id/drop_all"
        android:orderInCategory="100"
        android:title="@string/menu_dropAll"
        app:showAsAction="never"/>
    <item
        android:id="@+id/delLastRound_settings"
        android:orderInCategory="100"
        android:title="@string/menu_delete_LastRound"
        app:showAsAction="never"/>
    <item
        android:id="@+id/delPlayer_settings"
        android:orderInCategory="100"
        android:title="@string/menu_delPlayers"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/menu_about"
        app:showAsAction="never"/>
    <item
        android:id="@+id/exit_settings"
        android:orderInCategory="100"
        android:title="@string/menu_exit"
        app:showAsAction="never"/>

</menu>