<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="?android:attr/actionBarSize"
    android:background="@mipmap/background"
    tools:context=".AddPlayer">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
   >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addPlayer_tv_name"
                android:id="@+id/txtNameNewPlayer"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etNameNewPlayer"
                android:maxLines="1"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llAddPlInfGame"
            android:visibility="invisible"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvCountParty"
                android:layout_marginTop="5dp"
                android:text="@string/addPlayer_tv_countRnd"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvMaxScore"
                android:layout_marginTop="5dp"
                android:text="@string/addPlayer_tv_maxScore"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvMinScore"
                android:layout_marginTop="5dp"
                android:text="@string/addPlayer_tv_minScore"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addPlayer_tv_addScore4New"
                android:id="@+id/tv4"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/addPlayer_tv_InfoRevers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/addPlayer_tv_reversGame"
                android:textColor="#750b10"
                android:gravity="center"
                android:visibility="invisible"
            />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llAddScore4Player"
            android:visibility="invisible"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addPlayer_tv_Score"
                android:id="@+id/tvScoreNewPlayer"
                android:layout_marginRight="30dp"
                />

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/etScoreNewPlayer"
                android:inputType="number"
                android:maxLines="1"

                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtOk"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:id="@+id/btAddPlayer"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/button"
                android:layout_gravity="center"/>
        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</RelativeLayout>
