<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="?android:attr/actionBarSize"
    android:background="@mipmap/background"
    tools:context=".SettingApp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_reversInf"
            android:textColor="@color/colorPrimaryText"
            android:id="@+id/swReversOrder"
            android:textSize="16sp"
            android:layout_gravity="right"
            android:checked="false" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/llStartValue"
            android:visibility="invisible"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_firstValue"
                android:id="@+id/tvStartValue"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14sp"
                android:paddingRight="70dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etSettingStartValue"
                android:inputType="number"
                android:maxLines="1"
                />
        </LinearLayout>
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_maxScore"
            android:id="@+id/swMaxScore"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryText"
            android:layout_gravity="right"
            android:checked="false" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/llMaxScore"
            android:visibility="invisible"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_tvMaxScore"
                android:id="@+id/tvMsxValue"
                android:textColor="@color/colorSecondaryText"
                android:textSize="14sp"
                android:paddingRight="70dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etSettingMaxValue"
                android:inputType="number"
                android:maxLines="1"
                />
        </LinearLayout>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_negativNum"
            android:id="@+id/swNegativNum"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryText"
            android:layout_gravity="right"
            android:checked="false" />

    </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/ok"
            android:id="@+id/btSetOk"
            android:layout_gravity="right"
            android:layout_below="@+id/linearLayout2"
            android:layout_alignEnd="@+id/linearLayout2"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
        >

            </Button>

</RelativeLayout>
